--- a/grid/style.css
+++ b/grid/style.css
@@ -6,8 +6,19 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    perspective: 900px;
+    background-color: #222;
 }
-
+input {
+    display: none;
+}
+input[id=check-icon]:checked ~ nav {
+    transform: rotateY(20deg);
+    opacity: 1;
+}
+input[id=check-icon]:checked ~ main {
+    transform: rotateY(-15deg);
+}
 #menu-icon {
     z-index: 10;
     position: fixed;
@@ -15,6 +26,7 @@ body {
     left: 30px;
     font-size: 2rem;
     animation: icon-move 0.5s infinite alternate;
+    cursor: pointer;
 }
 @keyframes icon-move {
     0% {
@@ -26,9 +38,52 @@ body {
     }
 }
 
+
+/* ****************** nav ******************  */
+input[id=menu1]:checked ~ main > #box1,
+input[id=menu2]:checked ~ main > #box2,
+input[id=menu3]:checked ~ main > #box3 {
+    opacity: 1;
+}
+input[id=menu1]:checked ~ main > #box1 > p,
+input[id=menu2]:checked ~ main > #box2 > p, 
+input[id=menu3]:checked ~ main > #box3 > p {
+    transform: rotateY(0deg);
+}
+
+nav {
+    width: 150px;
+    height: 100%;
+    background-color: #ddd;
+    position: absolute;
+    top: 0; left: 0;
+    z-index: 2;
+    transform: rotateY(120deg);
+    transform-origin: left center;
+    opacity: 0;
+    transition: all 1s;
+}
+nav > img {
+    display: block;
+    width: 60%;
+    margin: 7rem auto;
+}
+nav > ul > li {
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 1.5rem;
+}
+nav > ul > li > label {
+    cursor: pointer;
+}
+
 /* ******************main******************* */
 main {
     height: 100vh;
+    position: relative;
+    transform: rotateY(0deg);
+    transform-origin: right center;
+    transition: all 1s;
 }
 main > section {
     width: 100%;
@@ -36,6 +91,7 @@ main > section {
     display: grid;
     position: absolute;
     top: 0; left:0;
+    opacity: 0;
 }
 main > section > p {
     font-size: 2rem;
@@ -43,12 +99,15 @@ main > section > p {
     justify-content: center;
     align-items: center;
     color: #fff;
+    transform: rotateY(180deg);
+    transition: all 1s;
 }
 
 
 /* ******************** box1 ********************** */
 
 section#box1 {
+    z-index: 1;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(4.1fr);
 }
