--- a/LOGGER/style.css
+++ b/LOGGER/style.css
@@ -11,7 +11,6 @@
 }
 
 
-
 /* header 영역 */
 
 header {
@@ -22,6 +21,44 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+header > nav {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-self: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+header > nav > h1 {
+    font-size: 2rem;
+    padding: 20px;
+    background-color: #5d9ab2;
+    color: #fff;
+    margin-left: 50px;
+}
+
+header > nav > ul {
+    list-style: none;
+    margin-right: 30px;
+}
+
+header > nav > ul > li{
+    display: inline-block;
+    padding: 10px 20px;
+}
+
+header > nav > ul > li:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+header > nav > ul > li > a {
+    text-decoration: none;
+    color: inherit;
+}
+
 #head {
     width: 500px;
     text-align: center;
@@ -222,4 +259,113 @@ footer > .footlist > .footmenu > ul > li:nth-child(1) {
 
 footer > .footlist > .footmenu > ul > li:nth-child(2) {
     font-weight: 500;
+}
+
+
+
+/* contents.html > main#content  */
+
+main#content {
+    width: 50%;
+    margin: 0 auto;
+}
+main#content > div {
+    margin: 10px 0;
+}
+main#content > .detail > h2,
+main#about > .title > h2,
+main#notice > .title > h2 {
+    border-left: 13px solid orange;
+    padding-left: 10px;
+    margin: 20px 0;
+    font-size: 1.7rem;
+}
+main#content > .detail > p {
+    margin: 30px 0;
+    font-size: 1.2rem;
+    line-height: 2;
+}
+main#content > .detail > img {
+    width: 100%;
+}
+
+
+
+/* about.html > main#about  */
+
+
+main#about > .title {
+    width: 50%;
+    margin: 0 auto;
+}
+main#about > .title > p {
+    line-height: 1.5;
+    margin: 10px 0;
+    text-align: justify;
+}
+main#about > .detail {
+    background-color: #5d9ab2;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+}
+main#about > .detail > * {
+    width: 30%;
+    color: #fff;
+}
+main#about > .detail > table {
+    border-collapse: collapse;
+    margin: 30px;
+}
+main#about > .detail > table > tbody > tr {
+    border-bottom: 1px solid #fff;
+    padding: 20px 0;
+}
+
+
+
+/* notice.html > main#notice  */
+
+main#notice > .title {
+    width: 50%;
+    margin: 0 auto;
+}
+main#notice > .title > .contact {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 30px 0;
+}
+main#notice > .title > .contact > .item {
+    border: 0.8px solid #cecece;
+    flex: 1;
+    text-align: center;
+    padding: 30px;
+}
+main#notice > .title > .contact > .item > div {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    border-radius: 50%;
+    background-color: #5d9ab2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main#notice > .title > .contact > .item > div > i {
+    font-size: 1.5rem;
+}
+main#notice > .title > .contact > .item > p:nth-child(2) {
+    font-size: 1.3rem;
+    font-weight: bolder;
+    margin: 10px 0;
+}
+
+main#notice > .map > h2 {
+    text-align: center;
+    background-color: #5d9ab2;
+    color: #fff;
+    padding: 20px 0;
+    margin-top: 50px;
 }
