--- a/WORDGAME/CSS/style.css
+++ b/WORDGAME/CSS/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: 'NanumSquareRound', sans-serif;
   font-weight: 800;
-  /* letter-spacing: -0.3px; */
+  letter-spacing: -0.5px;
 }
 .bold {
   font-weight: 400;
@@ -102,14 +102,16 @@ a {
 #game {
   display: none;
   background-color: #F9F9F9;
-  height: 100vh;
+  height: 100dvh;
 }
 #header {
   background-color: #fff;
   width: 100%;
   max-width: 600px;
   height: 75px;
-  position: fixed;
+  position: sticky;
+  top:0;
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -132,7 +134,7 @@ a {
   font-size: 22px;
 }
 #chat-wrap { 
-  padding-top: 110px;
+  padding-top: 30px;
   height: calc(100vh - 110px);
   overflow-y: auto;
   background-color: #F9F9F9;
