--- a/WORDGAME/CSS/style.css
+++ b/WORDGAME/CSS/style.css
@@ -103,14 +103,17 @@ a {
   display: none;
   background-color: #F9F9F9;
   height: 100dvh;
+  overflow: hidden;
 }
 #header {
+  position: absolute;
+  top:0;
+  left: 0;
+  z-index: 9999;
+  height: 75px;
   background-color: #fff;
   width: 100%;
   max-width: 600px;
-  height: 75px;
-  position: sticky;
-  top:0;
   z-index: 10;
   display: flex;
   justify-content: space-between;
@@ -134,7 +137,7 @@ a {
   font-size: 22px;
 }
 #chat-wrap { 
-  padding-top: 30px;
+  padding-top: 110px;
   height: calc(100vh - 110px);
   overflow-y: auto;
   background-color: #F9F9F9;
@@ -220,8 +223,9 @@ a {
 /* ***************** 결과 화면 ******************* */
 #result-wrap {
   width: 100%;
+  height: 100vh;
   max-width: 600px;
-  padding: 0 35px;
+  padding: 0px 35px;
 }
 #result-screen {
   top: 0;
