--- a/blueproject/CSS/media.css
+++ b/blueproject/CSS/media.css
@@ -13,7 +13,7 @@ html {
 body {
   background-color: var(--main-color);
   color: var(--sub-color);
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 #logo {
   width: 80px;
