--- a/blueproject/CSS/media.css
+++ b/blueproject/CSS/media.css
@@ -54,7 +54,7 @@ body {
 #logo:hover > li:nth-child(2) { top: 0; }
 
 header {
-  padding-top: 150px;
+  padding-top: 25%;
   height: 100vh;
   position: relative;
   font-size: 3rem;
@@ -133,6 +133,7 @@ nav {
   transform: translateX(-50%);
   width: 80px;
   height: 80px;
+  opacity: 0.7;
 }
 .arrow-wrap > div {
   position: absolute;
@@ -234,4 +235,6 @@ section#about {
   border: 1px solid var(--sub-color);
   border-radius: 4rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  word-break: keep-all;
+  text-align: center;
 }
